fixed navbar and delted menu option. navbar should now be on the top of the page and right aligned. will have to wrap it next, the text is overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+
+
 body {
     background-color: #000;
     color: #fff;
@@ -30,6 +32,11 @@ header, footer {
   
   * {
     box-sizing: border-box;
+  }
+
+
+  .list{
+    justify-content: flex-end;
   }
   
   form.topnav input[type=text] {
@@ -128,4 +135,13 @@ header, footer {
     border: 2px solid #15124a;
     color: #fff;
 }
+
+.list{
+   justify-content: flex-end;
+    flex-wrap: nowrap;
+}
 /** dee changes /
+
+
+
+
